@@ -1,3 +1,8 @@
+2002-08-19  Stefan Kebekus <kebekus@users.sourceforge.net>
+
+	* src/xyz.cpp more bugfixing. The translator behaves now smarter
+	when interpreting the title and the atom types.
+
 2002-08-16  Stefan Kebekus <kebekus@users.sourceforge.net>
 
 	* src/pdb.cpp re-wrote routine to read CONECT records. That
